# CritFail

./: .gitignore  Cargo.toml  Justfile  LICENSE.txt  README.md
critfail/: Cargo.toml  README.md
critfail-app/: Cargo.toml  Justfile
critfail-app/src/: cli.rs  gui.rs
critfail-app/src/gui/: examples.rs  expression_box.rs  result_box.rs  style.rs
critfail-app/web/: index.html
critfail/src/: attack.rs  check.rs  damage.rs  error.rs  lib.rs  modifier.rs  roll.rs  rollexp.rs  util.rs
critfail/src/attack/: attackoutcome.rs  attackparse.rs
critfail/src/check/: checkoutcome.rs  checkparse.rs
critfail/src/damage/: damageoutcome.rs  damageparse.rs
critfail/src/roll/: rolloutcome.rs  rollparse.rs
critfail/src/rollexp/: rollexpparse.rs
src/: attack.rs  check.rs  cli.rs  damage.rs  gui.rs  lib.rs  main.rs  rollexp.rs  util.rs
src/attack/: attackparse.rs  attackroll.rs
src/check/: checkparse.rs  checkroll.rs
src/damage/: damageparse.rs  damageroll.rs
src/gui/: expression_box.rs  result_box.rs  style.rs
src/rollexp/: roll.rs  rollexpparse.rs
web/: index.html
