[package]
name = "critfail-app"
version = "0.2.0"
authors = ["Zack Yancey <mail@zackyancey.com>"]
edition = "2018"
repository = "https://github.com/zackyancey/CritFail"


[dependencies]
critfail = {path = "../critfail"}
git-version = "0.3.4"
iced = {version = "0.1", optional = true}

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
webbrowser = "0.5"

[features]
default = ["cli", "gui"]

cli = []
gui = ['iced']
